--- a/requirements.txt
+++ b/requirements.txt
@@ -74,18 +74,22 @@ cytoolz==0.11.0
 daal4py==2021.5.0
 dask==2022.2.1
 dataclasses==0.6
+datasets==2.10.1
 datashader==0.13.0
 datashape==0.5.4
 debugpy==1.5.1
 decorator==4.4.2
 defusedxml==0.7.1
 diff-match-patch==20200713
+dill==0.3.6
 distlib==0.3.6
 distributed==2022.2.1
 docker-pycreds==0.4.0
+docopt==0.6.2
 docutils==0.17.1
 entrypoints==0.4
 et-xmlfile==1.1.0
+evaluate==0.4.0
 executing==0.8.3
 fastjsonschema==2.15.1
 ffmpeg==1.4
@@ -94,7 +98,7 @@ flake8==3.9.2
 Flask==1.1.2
 fonttools==4.25.0
 frozenlist==1.2.0
-fsspec==0.8.5
+fsspec==2023.1.0
 future==0.18.2
 gensim==3.8.3
 gitdb==4.0.9
@@ -144,6 +148,7 @@ jedi==0.18.1
 jieba==0.42.1
 Jinja2==2.11.3
 jinja2-time==0.2.0
+jiwer==2.5.1
 jmespath==0.10.0
 joblib==1.1.0
 json5==0.9.6
@@ -162,6 +167,7 @@ kiwisolver==1.3.1
 krb5==0.5.0
 lazy-object-proxy==1.6.0
 lerc==0.1.0
+Levenshtein==0.20.2
 libarchive-c==2.9
 libroadrunner==2.2.2
 libtiff==0.4.2
@@ -182,6 +188,7 @@ mpmath==1.2.1
 msgpack==1.0.2
 multidict==5.2.0
 multipledispatch==0.6.0
+multiprocess==0.70.14
 munkres==1.1.4
 mwclient==0.10.1
 mypy-extensions==0.4.3
@@ -223,6 +230,7 @@ pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==9.0.1
 pip==21.2.4
+pipreqs==0.4.11
 pkginfo==1.8.2
 platformdirs==3.0.0
 plotly==5.6.0
@@ -237,6 +245,7 @@ psutil==5.7.3
 ptyprocess==0.7.0
 pure-eval==0.2.2
 py==1.11.0
+pyarrow==11.0.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycodestyle==2.7.0
@@ -279,10 +288,12 @@ QtAwesome==1.0.3
 qtconsole==5.3.0
 QtPy==2.0.1
 queuelib==1.5.0
+rapidfuzz==2.13.7
 regex==2022.10.31
 requests==2.25.0
 requests-file==1.5.1
 requests-oauthlib==1.3.0
+responses==0.18.0
 rope==0.22.0
 rsa==4.6
 Rtree==0.9.7
@@ -357,7 +368,7 @@ torchvision==0.14.1
 tornado==6.1
 tqdm==4.64.0
 traitlets==5.1.1
-transformers==4.26.1
+transformers==4.27.0.dev0
 Twisted==22.2.0
 typed-ast==1.4.3
 typing_extensions==4.1.1
@@ -382,7 +393,9 @@ xlrd==2.0.1
 XlsxWriter==3.0.3
 xlwings==0.24.9
 xmltodict==0.13.0
+xxhash==3.2.0
 yapf==0.31.0
+yarg==0.1.9
 yarl==1.6.3
 yaspin==2.1.0
 zict==2.0.0
